improved build script, back to jdk 7